chore(ui): improve code quality

--- a/vyne-query-service/src/main/web/.eslintrc.json
+++ b/vyne-query-service/src/main/web/.eslintrc.json
@@ -21,8 +21,10 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
+        "prefer-arrow/prefer-arrow-functions": "off",
         "@typescript-eslint/consistent-type-definitions": "error",
         "@typescript-eslint/dot-notation": "off",
+        "@typescript-eslint/explicit-function-return-type": "error",
         "@typescript-eslint/explicit-member-accessibility": [
           "off",
           {
