support for passing api key through query parameters

--- a/vyne-spring-http/src/test/resources/auth/sample-with-substitution.conf
+++ b/vyne-spring-http/src/test/resources/auth/sample-with-substitution.conf
@@ -1,6 +1,8 @@
 authenticationTokens {
    MyService {
-      tokenType = AuthorizationBearerHeader
+      tokenType = Header
+      valuePrefix = Bearer
+      paramName = Authorization
       value = ${foo} // Foo will get substituted from a fallback (normally the env)
    }
 }
