--- a/vyne-spring-http/src/test/resources/auth/sample.conf
+++ b/vyne-spring-http/src/test/resources/auth/sample.conf
@@ -1,6 +1,8 @@
 authenticationTokens {
    MyService {
-      tokenType = AuthorizationBearerHeader
+      tokenType = Header
+      valuePrefix=Bearer
+      paramName=Authorization
       value = "Hello, World"
    }
 }
