--- a/vyne-query-service/src/main/web/angular.json
+++ b/vyne-query-service/src/main/web/angular.json
@@ -44,6 +44,7 @@
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
+              "node_modules/monaco-editor/dev/vs/editor/editor.main.css",
               "node_modules/@taiga-ui/core/styles/taiga-ui-global.less",
               "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
               "./src/styles.scss"
