--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -30,11 +30,9 @@
     "@angular/platform-browser-dynamic": "^12.2.14",
     "@angular/platform-server": "^12.2.14",
     "@angular/router": "^12.2.14",
-    "@codingame/monaco-languageclient": "^0.17.0",
     "@covalent/core": "^3.1.1",
     "@covalent/dynamic-forms": "^3.1.1",
     "@covalent/highlight": "^3.1.1",
-    "@materia-ui/ngx-monaco-editor": "^5.1.0",
     "@ng-select/ng-select": "^7.4.0",
     "@stomp/ng2-stompjs": "^7.2.0",
     "@swimlane/ngx-graph": "^7.1.2",
@@ -59,8 +57,8 @@
     "install": "^0.13.0",
     "mermaid": "^8.0.0-rc.8",
     "moment": "^2.24.0",
-    "monaco-editor": "^0.30.1",
-    "monaco-editor-core": "^0.30.1",
+    "monaco-editor": "^0.33.0",
+    "monaco-languageclient": "2.0.2",
     "nanoid": "^3.1.22",
     "ngx-file-drop": "^12.0.0",
     "ngx-highlightjs": "^5.0.0",
@@ -78,7 +76,7 @@
     "styled-components": "^5.3.3",
     "tslib": "^2.0.0",
     "url-parse": "^1.4.4",
-    "vscode-jsonrpc": "^6.0.0",
+    "vscode-ws-jsonrpc": "^1.0.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -96,7 +94,6 @@
     "@angular/elements": "^13.1.0",
     "@angular/language-service": "^12.2.14",
     "@babel/core": "^7.7.7",
-    "@codingame/monaco-jsonrpc": "^0.3.1",
     "@compodoc/compodoc": "^1.1.16",
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
