--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -33,6 +33,7 @@ spring:
 eureka:
    uri: http://127.0.0.1:8761
    client:
+      enabled: false
       registryFetchIntervalSeconds: 1
       initialInstanceInfoReplicationIntervalSeconds: 5
       serviceUrl:
@@ -42,18 +43,8 @@ eureka:
       leaseExpirationDurationInSeconds: 5
 
 vyne:
-   queryService:
-      name: query-service
-   queryServiceUrl: http://${vyne.queryService.name}
-   schema:
-      publicationMethod: REMOTE
-      pollInterval: 5s
-      publishRetryInterval: 3s
-
-   hazelcast:
-      discovery: multicast # One of aws/multicast/swarm
-      memberTag: cask # Member tags allow delegation of responsibilities
-      eurekaUri: http://127.0.0.1:8761/eureka/
+   schema-server:
+      url: http://schema-server
 
 feign:
    client:
@@ -81,22 +72,6 @@ cask:
    maxTextMessageBufferSize: 67108864 # 1024 * 1024 * 64
    maxBinaryMessageBufferSize: 67108864 # 1024 * 1024 * 64
    eviction.cron: 0 0 * * * * # on the hour every hour
-   views:
-      -  typeName: ion.orders.OrderEvent
-         distinct: true
-         inherits:
-            - cacib.orders.OrderLifecycleEvent
-         join:
-            kind: LEFT_OUTER
-            left: ion.orders.Order
-            right: ion.trade.Trade
-            joinOn:
-               -  leftField: orderId
-                  rightField: orderId
-               -  leftField: lastTradeDate
-                  rightField: tradeCreationDate
-               -  leftField: lastTradeTime
-                  rightField: tradeCreationTime
    service:
       annotations: Datasource
    streamQueries:
