Make schema server rsocket port configurable

--- a/schema-server/src/main/resources/application.yml
+++ b/schema-server/src/main/resources/application.yml
@@ -20,7 +20,7 @@ eureka:
       leaseRenewalIntervalInSeconds: 2
       leaseExpirationDurationInSeconds: 5
       metadata-map:
-         vyne-schema-server-port: ${vyne.schema.server.port}
+         rsocket-port: ${vyne.schema.server.port}
 vyne:
    schema:
       server:
