feat(helm): add Helm 3 charts for Vyne

--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -11,7 +11,9 @@
          "connectors/core",
          "connectors/jdbc",
          "connectors/kafka",
+         "dependencies",
          "eureka",
+         "helm",
          "jwt-auth-server",
          "licensing",
          "pipelines",
