--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
       <version>2.7.1</version>
    </parent>
 
+   <url>https://vyne.co</url>
+
+   <licenses>
+      <license>
+         <name>Vyne Enterprise License</name>
+         <url>https://vyne.co</url>
+      </license>
+   </licenses>
 
    <properties>
       <taxi.version>1.33.3-SNAPSHOT</taxi.version>
@@ -521,6 +529,24 @@
       </plugins>
       <pluginManagement>
          <plugins>
+            <plugin>
+               <groupId>org.codehaus.mojo</groupId>
+               <artifactId>license-maven-plugin</artifactId>
+               <version>2.0.0</version>
+               <configuration>
+                  <licenseName>Vyne Enterprise License</licenseName>
+                  <licenseResolver>${project.baseUri}/src/license</licenseResolver>
+               </configuration>
+               <executions>
+                  <execution>
+                     <id>first</id>
+                     <goals>
+                        <goal>update-file-header</goal>
+                     </goals>
+                     <phase>process-sources</phase>
+                  </execution>
+               </executions>
+            </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
