ci(renovate): disable npm for now due to being so much behind that a manual intervention will be required first

--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,10 @@
             "digest"
          ],
          "automerge": false
+      },
+      {
+         "packageNames": ["npm"],
+         "enabled": false
       }
    ],
    "prConcurrentLimit": 1,
