ci(renovate): ignore the regression test Terraform

--- a/renovate.json
+++ b/renovate.json
@@ -22,5 +22,8 @@
    "reviewers": [
       "RoopeHakulinen"
    ],
-   "updateNotScheduled": false
+   "updateNotScheduled": false,
+   "ignorePaths": [
+      "regression-tests/terraform/"
+   ]
 }
