--- a/schema-server/src/main/resources/application.yml
+++ b/schema-server/src/main/resources/application.yml
@@ -47,7 +47,6 @@ server:
 
 # Actuators + prometheus metrics configuration
 
-management.endpoints.web.base-path: /api/actuator
 management:
    metrics:
       export:
@@ -71,11 +70,16 @@ management:
          enabled: true
       prometheus:
          enabled: false
+      health:
+         show-components: always
+         show-details: always
 
    endpoints:
       web:
+         base-path: /api/actuator
          exposure:
             include: prometheus,metrics,info,health
+
 
 #logging:
 #   level:
