feature(schema-consumer-rsocket): when QueryServer and Pipeline are using RSocket for schema consumption, a new health endpoint indicates if a current RSocket connection to the schema server is active.

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -149,7 +149,7 @@ eureka:
       leaseRenewalIntervalInSeconds: 2
       leaseExpirationDurationInSeconds: 5
 
-management.endpoints.web.base-path: /api/actuator
+
 
 
 management:
@@ -174,10 +174,13 @@ management:
       web:
          exposure:
             include: prometheus,metrics,info,health,logfile,loggers
+         base-path: /api/actuator
 
    endpoint:
       metrics:
          enabled: true
       prometheus:
          enabled: false
-
+      health:
+         show-details: always
+         show-components: always
