--- a/pipelines/pipeline-jet/src/main/resources/application.yml
+++ b/pipelines/pipeline-jet/src/main/resources/application.yml
@@ -53,9 +53,6 @@ vyne:
          searchPathExclusionsCacheSize: 200000
 
 
-management.endpoints.web.base-path: /api/actuator
-
-
 management:
    metrics:
       export:
@@ -78,10 +75,14 @@ management:
       web:
          exposure:
             include: prometheus,metrics,info,health,logfile,loggers
+         base-path: /api/actuator
 
    endpoint:
       metrics:
          enabled: true
       prometheus:
          enabled: false
+      health:
+         show-components: always
+         show-details: always
 
