--- a/schema-management/schema-spring/pom.xml
+++ b/schema-management/schema-spring/pom.xml
@@ -56,6 +56,10 @@
          <version>0.20.2-SNAPSHOT</version>
       </dependency>
       <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-actuator</artifactId>
+      </dependency>
+      <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-rsocket-common</artifactId>
          <version>0.20.2-SNAPSHOT</version>
