--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
    </licenses>
 
    <properties>
-      <taxi.version>1.33.3-SNAPSHOT</taxi.version>
+      <taxi.version>1.33.4</taxi.version>
 
       <!-- Used in QueryService -->
       <elasticsearch.version>7.5.2</elasticsearch.version>
@@ -93,7 +93,7 @@
       <module>protobuf-utils</module>
       <module>licensing</module>
       <module>vyne-spring-http-client</module>
-       <module>datatype-converters</module>
+      <module>datatype-converters</module>
    </modules>
 
    <scm>
@@ -536,6 +536,13 @@
                <configuration>
                   <licenseName>Vyne Enterprise License</licenseName>
                   <licenseResolver>${project.baseUri}/src/license</licenseResolver>
+                  <licenseMerges>
+                     <licenseMerge>Apache License, Version 2.0|The Apache Software License, Version 2.0|Apache 2|Apache License 2.0|AL 2.0|Apache-2.0|The Apache License, Version 2.0</licenseMerge>
+                     <licenseMerge>CDDLv1|Common Development and Distribution License (CDDL) v1.0|COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0</licenseMerge>
+                  </licenseMerges>
+
+                  <!--exclude test-scoped dependencies from the 3rd party license-list-->
+                  <excludedScopes>test</excludedScopes>
                </configuration>
                <executions>
                   <execution>
