--- a/schema-management/schema-rsocket-common/pom.xml
+++ b/schema-management/schema-rsocket-common/pom.xml
@@ -46,6 +46,10 @@
          <groupId>com.fasterxml.jackson.dataformat</groupId>
          <artifactId>jackson-dataformat-cbor</artifactId>
       </dependency>
+      <dependency>
+         <groupId>com.fasterxml.jackson.datatype</groupId>
+         <artifactId>jackson-datatype-jsr310</artifactId>
+      </dependency>
    </dependencies>
 
    <dependencyManagement>
