--- a/schema-management/schema-rsocket-consumer/pom.xml
+++ b/schema-management/schema-rsocket-consumer/pom.xml
@@ -27,6 +27,17 @@
          <artifactId>events-api</artifactId>
          <version>0.20.2-SNAPSHOT</version>
       </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-core-types</artifactId>
+         <version>${project.version}</version>
+         <type>test-jar</type>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>com.fasterxml.jackson.datatype</groupId>
+         <artifactId>jackson-datatype-jsr310</artifactId>
+      </dependency>
    </dependencies>
 
 </project>
