build(renovate): enable automerge of Renovate PRs for patch, pin and digest updates

--- a/renovate.json
+++ b/renovate.json
@@ -1,20 +1,18 @@
 {
    "extends": [
-      "config:base",
-      "schedule:nonOfficeHours"
+      "config:base"
    ],
    "packageRules": [
       {
          "updateTypes": [
-            "minor",
             "patch",
             "pin",
             "digest"
          ],
-         "automerge": false
+         "automerge": true
       }
    ],
-   "prConcurrentLimit": 1,
+   "prConcurrentLimit": 5,
    "reviewers": [
       "RoopeHakulinen"
    ],
