build(gitlab-ci): fix the detached pipelines that appeared due to manual steps in the pipeline for MRs

--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -13,6 +13,7 @@
          "connectors/kafka",
          "dependencies",
          "eureka",
+         "gitlab-ci",
          "helm",
          "jwt-auth-server",
          "licensing",
