--- a/vyne-analytics-server/src/main/resources/application.yml
+++ b/vyne-analytics-server/src/main/resources/application.yml
@@ -29,7 +29,9 @@ spring:
       username: sa
       password:
       driverClassName: org.h2.Driver
-      schema: classpath:schema.sql
+   sql:
+      init:
+         schema-locations: classpath:schema.sql
 
 server:
    port: 9405
