--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -38,7 +38,6 @@ spring:
       password:
       driverClassName: org.h2.Driver
       database-platform: org.hibernate.dialect.H2Dialect
-      schema: classpath:schema.sql
    security:
       oauth2:
          resourceserver:
@@ -46,6 +45,9 @@ spring:
                jwk-set-uri: ${vyne.security.open-ipd.jwk-set-uri:''}
 
    cloud.config.enabled: false
+   sql:
+      init:
+         schema-locations: classpath:schema.sql
 
 #   cloud:
 #      discovery:
