--- a/connectors/kafka-connector/pom.xml
+++ b/connectors/kafka-connector/pom.xml
@@ -77,7 +77,7 @@
       <dependency>
          <groupId>io.projectreactor.kafka</groupId>
          <artifactId>reactor-kafka</artifactId>
-         <version>1.2.2.RELEASE</version>
+         <version>1.3.12</version>
       </dependency>
 
 
