Our spring boot version requires us to set spring.sql.init.mode to always to RUN DDL scripts

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -48,6 +48,7 @@ spring:
    sql:
       init:
          schema-locations: classpath:schema.sql
+         mode: always
 
 #   cloud:
 #      discovery:
