--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -59,6 +59,14 @@
          <version>6.4.3</version>
       </dependency>
 
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-core-types</artifactId>
+         <version>${project.version}</version>
+         <scope>test</scope>
+         <type>test-jar</type>
+      </dependency>
+
       <!-- Spring boot actuator/micrometer/prometheus dependencies -->
       <dependency>
          <groupId>org.springframework.boot</groupId>
