build(renovate): don't automerge certain dependencies due to them potential causing problems

--- a/renovate.json
+++ b/renovate.json
@@ -10,9 +10,17 @@
             "digest"
          ],
          "automerge": true
+      },
+      {
+         "matchPackagePatterns": [
+            "^flyway",
+            "^lucene",
+            "^terraform"
+         ],
+         "automerge": false
       }
    ],
-   "prConcurrentLimit": 5,
+   "prConcurrentLimit": 2,
    "reviewers": [
       "RoopeHakulinen"
    ],
