--- a/vyne-csv-utils/pom.xml
+++ b/vyne-csv-utils/pom.xml
@@ -19,6 +19,13 @@
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
+         <artifactId>vyne-core-types</artifactId>
+         <version>${project.version}</version>
+         <scope>test</scope>
+         <type>test-jar</type>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
          <artifactId>datatype-converters</artifactId>
          <version>0.20.2-SNAPSHOT</version>
          <scope>test</scope>
