--- a/schema-server-core/pom.xml
+++ b/schema-server-core/pom.xml
@@ -64,7 +64,7 @@
       </dependency>
       <dependency>
          <groupId>org.eclipse.jgit</groupId>
-         <artifactId>org.eclipse.jgit</artifactId>
+         <artifactId>org.eclipse.jgit.ssh.jsch</artifactId>
          <version>5.13.1.202206130422-r</version>
       </dependency>
       <dependency>
