build(renovate): don't automerge any Kotlin libraries as they don't follow semantic versioning

--- a/renovate.json
+++ b/renovate.json
@@ -16,7 +16,8 @@
             "^flyway",
             "^lucene",
             "^terraform",
-            "^wire"
+            "^wire",
+            "^kotlin"
          ],
          "automerge": false
       }
