minor(logging): add JSON logging configuration to be used with likes of ECS for CloudWatch to work correctly

--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -17,6 +17,7 @@
          "helm",
          "jwt-auth-server",
          "licensing",
+         "logging",
          "pipelines",
          "query-service",
          "regression-tests",
