--- a/test-cli/pom.xml
+++ b/test-cli/pom.xml
@@ -78,9 +78,9 @@
       </resources>
       <plugins>
          <plugin>
-            <groupId>pl.project13.maven</groupId>
-            <artifactId>git-commit-id-plugin</artifactId>
-            <version>2.2.6</version>
+            <groupId>io.github.git-commit-id</groupId>
+            <artifactId>git-commit-id-maven-plugin</artifactId>
+            <version>5.0.0</version>
             <executions>
                <execution>
                   <id>get-the-git-infos</id>
