build(maven): don't print the full maven output to boost the build times

--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -18,6 +18,7 @@
          "jwt-auth-server",
          "licensing",
          "logging",
+         "maven",
          "pipelines",
          "query-service",
          "regression-tests",
