minor(aws): use default credentials provider for AWS to allow not specifying...

--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -2,6 +2,7 @@
    "rules": {
       "scope-enum": [
          "analytics",
+         "aws",
          "casks",
          "core",
          "config-server",
