--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -45,10 +45,13 @@
     "ag-grid-angular": "^26.2.0",
     "ag-grid-community": "^26.2.0",
     "angular-oauth2-oidc": "^10.0.3",
+    "angular-resize-event": "3.0.2",
     "angular-split": "^4.0.0",
     "b64-to-blob": "^1.2.19",
     "class-transformer": "^0.2.0",
     "core-js": "^3.1.3",
+    "dagre": "^0.8.5",
+    "elkjs": "^0.8.2",
     "file-saver": "^2.0.2",
     "highlight.js": "^9.8.13",
     "highlightjs-line-numbers.js": "^2.8.0",
