fix(deps): update dependency com.hazelcast:hazelcast to v5

--- a/pipelines/pipeline-jet/src/main/resources/hazelcast.yml
+++ b/pipelines/pipeline-jet/src/main/resources/hazelcast.yml
@@ -1,8 +1,6 @@
 hazelcast:
-
-   metrics:
-      # whether metrics collection should be enabled
+   jet:
       enabled: true
-
-      # metrics collection interval in seconds
+   metrics:
+      enabled: true
       collection-frequency-seconds: 5
