--- a/pipelines/pipeline-jet/pom.xml
+++ b/pipelines/pipeline-jet/pom.xml
@@ -16,8 +16,7 @@
       <maven.compiler.source>11</maven.compiler.source>
       <maven.compiler.target>11</maven.compiler.target>
       <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
-      <hazelcast-jet.version>4.5.3</hazelcast-jet.version>
-      <hazelcast.version>4.2.5</hazelcast.version>
+      <hazelcast.version>5.1.3</hazelcast.version>
    </properties>
 
    <dependencies>
@@ -75,27 +74,16 @@
          <artifactId>kotlinx-coroutines-jdk8</artifactId>
          <version>${kotlin.coroutines.version}</version>
       </dependency>
-
       <dependency>
-         <groupId>com.hazelcast.jet</groupId>
-         <artifactId>hazelcast-jet</artifactId>
-         <version>${hazelcast-jet.version}</version>
-      </dependency>
-      <dependency>
-         <groupId>com.hazelcast.jet</groupId>
-         <artifactId>hazelcast-jet-spring</artifactId>
-         <version>${hazelcast-jet.version}</version>
+         <groupId>com.hazelcast</groupId>
+         <artifactId>hazelcast-spring</artifactId>
+         <version>${hazelcast.version}</version>
       </dependency>
       <dependency>
          <groupId>com.hazelcast.jet</groupId>
          <artifactId>hazelcast-jet-s3</artifactId>
-         <version>${hazelcast-jet.version}</version>
+         <version>${hazelcast.version}</version>
       </dependency>
-      <!--      <dependency>-->
-      <!--         <groupId>io.vyne</groupId>-->
-      <!--         <artifactId>pipelines-orchestrator-api</artifactId>-->
-      <!--         <version>${project.version}</version>-->
-      <!--      </dependency>-->
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-actuator</artifactId>
@@ -132,14 +120,6 @@
          <artifactId>vyne</artifactId>
          <version>${project.version}</version>
          <type>test-jar</type>
-         <scope>test</scope>
-      </dependency>
-
-      <dependency>
-         <groupId>com.hazelcast.jet</groupId>
-         <artifactId>hazelcast-jet-core</artifactId>
-         <version>${hazelcast-jet.version}</version>
-         <classifier>tests</classifier>
          <scope>test</scope>
       </dependency>
       <dependency>
@@ -191,7 +171,7 @@
       <dependency>
          <groupId>com.hazelcast.jet</groupId>
          <artifactId>hazelcast-jet-kafka</artifactId>
-         <version>${hazelcast-jet.version}</version>
+         <version>${hazelcast.version}</version>
       </dependency>
       <dependency>
          <groupId>org.springframework.kafka</groupId>
@@ -216,14 +196,6 @@
          <artifactId>kafka</artifactId>
          <scope>test</scope>
       </dependency>
-
-
-      <dependency>
-         <groupId>com.hazelcast.jet.contrib</groupId>
-         <artifactId>http</artifactId>
-         <version>0.1</version>
-      </dependency>
-
 
       <dependency>
          <groupId>de.bytefish.pgbulkinsert</groupId>
