--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -50,7 +50,7 @@
     "b64-to-blob": "^1.2.19",
     "class-transformer": "^0.2.0",
     "core-js": "^3.1.3",
-    "dagre": "^0.8.5",
+    "detect-collisions": "^6.4.2",
     "elkjs": "^0.8.2",
     "file-saver": "^2.0.2",
     "highlight.js": "^9.8.13",
