--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
       <module>licensing</module>
       <module>vyne-spring-http-client</module>
       <module>datatype-converters</module>
+      <module>taxi-playground</module>
    </modules>
 
    <scm>
