--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -142,7 +142,7 @@
       <dependency>
          <groupId>io.netty</groupId>
          <artifactId>netty-tcnative-boringssl-static</artifactId>
-         <version>1.1.33.Fork26</version>
+         <version>2.0.54.Final</version>
       </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
