--- a/pom.xml
+++ b/pom.xml
@@ -150,15 +150,18 @@
       <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
-         <!--         <version>2.28.2</version>-->
          <scope>test</scope>
       </dependency>
-      <!--      <dependency>-->
-      <!--         <groupId>net.bytebuddy</groupId>-->
-      <!--         <artifactId>byte-buddy-dep</artifactId>-->
-      <!--         <version>1.9.12</version>-->
-      <!--         <scope>test</scope>-->
-      <!--      </dependency>-->
+      <dependency>
+         <groupId>net.bytebuddy</groupId>
+         <artifactId>byte-buddy-agent</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>net.bytebuddy</groupId>
+         <artifactId>byte-buddy</artifactId>
+         <scope>test</scope>
+      </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-test</artifactId>
