build(renovate): automatically merge even minors and remove the concurrent PRs limit

--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -21,6 +21,7 @@
          "logging",
          "pipelines",
          "query-service",
+         "renovate",
          "regression-tests",
          "schema-server",
          "start.vyne.co",
