--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -56,6 +56,7 @@
     "file-saver": "^2.0.2",
     "highlight.js": "^9.8.13",
     "highlightjs-line-numbers.js": "^2.8.0",
+    "html-to-image": "^1.10.8",
     "http-status-codes": "^1.3.0",
     "immutable": "^3.8.2",
     "install": "^0.13.0",
